# qa-repo-eval

./: .gitignore  README.md  main.py  pyproject.toml
src/qa_repo_eval_tool/: __init__.py  cli.py  git_utils.py  metrics.py  metrics_calculator.py  qa_analysis.py  reporter.py  types.py
src/qa_repo_eval_tool/utils/: __init__.py  prompts.py
